Aligned header and footer Header and footer display flex, gap, space-between Also began styling ul with no padding, might need to correct that

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -31,6 +31,20 @@ input {
   width: 400px;
 }
 
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 8px;
+  margin: 8px;
+  padding: 0;
+}
+
 .content {
   display: flex;
   flex-direction: column;
